Avoid width distortion

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,11 +6,13 @@ $primary: var(--bs-primary);
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body {
     overflow-y: scroll;
     overflow-x: hidden;
+    max-width: 100vw;
 }
 
 ::-moz-selection {
